Add orders view

--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -10,6 +10,11 @@
         android:icon="@drawable/ic_baseline_message_24"
         android:title="@string/bottom_navigation_menu_label_menu"/>
     <item
+        android:id="@+id/bottom_navigation_menu_page_order"
+        android:visible="false"
+        android:icon="@drawable/ic_baseline_message_24"
+        android:title="@string/bottom_navigation_menu_label_order"/>
+    <item
         android:id="@+id/bottom_navigation_menu_page_complaints"
         android:visible="false"
         android:icon="@drawable/ic_baseline_message_24"
