--- a/app/src/main/res/layout/fragment_order_item.xml
+++ b/app/src/main/res/layout/fragment_order_item.xml
@@ -12,12 +12,14 @@
         android:layout_margin="@dimen/text_margin"
         android:textAppearance="?attr/textAppearanceListItem"
         android:text="Order"
+        android:lines="1"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/open"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/open"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/action_view"
         android:layout_marginEnd="5dp"
@@ -26,7 +28,7 @@
 
     <Button
         android:id="@+id/reject"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/action_reject"
         app:layout_constraintEnd_toEndOf="parent"
