--- a/app/src/main/res/layout/activity_complaint_form.xml
+++ b/app/src/main/res/layout/activity_complaint_form.xml
@@ -7,11 +7,11 @@
     tools:context=".UI.Activities.ChefSignUpFormActivity">
 
     <TextView
-        android:id="@+id/chef_sign_up_form_title"
+        android:id="@+id/complaint_form_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
-        android:text="@string/chef_sign_up_form_title"
+        android:text="@string/complaint_form_title"
         android:textSize="28sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.436"
@@ -19,93 +19,19 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/chef_sign_up_form_first_name"
+        android:id="@+id/complaint_form_description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:ems="10"
-        android:hint="@string/user_sign_up_form_first_name"
+        android:hint="@string/complaint_form_description"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.184"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/chef_sign_up_form_title" />
-
-    <EditText
-        android:id="@+id/chef_sign_up_form_last_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:ems="10"
-        android:hint="@string/user_sign_up_form_last_name"
-        app:layout_constraintEnd_toEndOf="@id/chef_sign_up_form_first_name"
-        app:layout_constraintStart_toStartOf="@id/chef_sign_up_form_first_name"
-        app:layout_constraintTop_toBottomOf="@id/chef_sign_up_form_first_name" />
-
-    <EditText
-        android:id="@+id/chef_sign_up_form_email"
-        android:layout_width="wrap_content"
-        android:layout_height="46dp"
-        android:layout_marginTop="30dp"
-        android:ems="10"
-        android:hint="@string/user_sign_up_form_email"
-        android:inputType="textEmailAddress"
-        app:layout_constraintEnd_toEndOf="@id/chef_sign_up_form_last_name"
-        app:layout_constraintStart_toStartOf="@id/chef_sign_up_form_last_name"
-        app:layout_constraintTop_toBottomOf="@id/chef_sign_up_form_last_name" />
-
-    <EditText
-        android:id="@+id/chef_sign_up_form_password"
-        android:layout_width="wrap_content"
-        android:layout_height="46dp"
-        android:layout_marginTop="10dp"
-        android:ems="10"
-        android:hint="@string/user_sign_up_form_password"
-        android:inputType="textPassword"
-        app:layout_constraintEnd_toEndOf="@id/chef_sign_up_form_email"
-        app:layout_constraintStart_toStartOf="@id/chef_sign_up_form_email"
-        app:layout_constraintTop_toBottomOf="@id/chef_sign_up_form_email" />
-
-    <EditText
-        android:id="@+id/chef_sign_up_form_description"
-        android:layout_width="wrap_content"
-        android:layout_height="52dp"
-        android:layout_marginTop="30dp"
-        android:ems="10"
-        android:hint="@string/user_sign_up_form_description"
-        android:inputType="text"
-        app:layout_constraintEnd_toEndOf="@id/chef_sign_up_form_password"
-        app:layout_constraintStart_toStartOf="@id/chef_sign_up_form_password"
-        app:layout_constraintTop_toBottomOf="@id/chef_sign_up_form_password" />
-
-
-    <EditText
-        android:id="@+id/chef_sign_up_form_address"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:ems="10"
-        android:hint="@string/user_sign_up_form_address"
-        android:inputType="text"
-        android:maxLines="1"
-        app:layout_constraintEnd_toEndOf="@id/chef_sign_up_form_description"
-        app:layout_constraintStart_toStartOf="@id/chef_sign_up_form_description"
-        app:layout_constraintTop_toBottomOf="@id/chef_sign_up_form_description" />
+        app:layout_constraintTop_toBottomOf="@id/complaint_form_title" />
 
     <Button
-        android:id="@+id/chef_sign_up_form_void_check"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:layout_marginTop="30dp"
-        android:text="Void Check"
-        style="@style/CallToAction"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintEnd_toEndOf="@id/chef_sign_up_form_address"
-        app:layout_constraintStart_toStartOf="@id/chef_sign_up_form_address"
-        app:layout_constraintTop_toBottomOf="@id/chef_sign_up_form_address"  />
-
-    <Button
-        android:id="@+id/chef_sign_up_form_submit_button"
+        android:id="@+id/complaint_form_submit_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
@@ -115,13 +41,6 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent" />
-    <ImageView
-        android:id="@+id/capturedimage"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        app:layout_constraintStart_toEndOf="@id/chef_sign_up_form_void_check"
-        app:layout_constraintTop_toTopOf="@id/chef_sign_up_form_void_check"
-        />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
