--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -8,17 +8,10 @@
     android:id="@+id/relativeLayout"
     android:animateLayoutChanges="true">
 
-
-
-
     <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/home_view_pager"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/coordinator"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-    />
+        android:layout_height="match_parent"
+        android:id="@+id/home_view_pager"/>
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:id="@+id/coordinator"
@@ -44,20 +37,6 @@
             android:src="@drawable/ic_baseline_add_24"
             app:layout_anchor="@id/home_bottom_app_bar"
             />
-
-
-
-
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
-    <androidx.appcompat.widget.SearchView
-        android:id="@+id/autoCompleteTextView"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:hint="@string/search_for_food" />
 </androidx.constraintlayout.widget.ConstraintLayout>
