--- a/app/src/main/res/layout/fragment_recommendations.xml
+++ b/app/src/main/res/layout/fragment_recommendations.xml
@@ -1,13 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/order_list"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:name="com.SEG2505_Group8.mealer.UI.Activities.RecommendationsFragment"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_marginLeft="16dp"
-    android:layout_marginRight="16dp"
-    app:layoutManager="LinearLayoutManager"
-    tools:context=".UI.Fragments.RecommendationsFragment"
-    tools:listitem="@layout/fragment_recommendation_item" />
+    android:layout_height="match_parent">
+
+    <androidx.appcompat.widget.SearchView
+        android:id="@+id/recommendation_search"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:hint="@string/search_for_food" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recommendation_list"
+        android:name="com.SEG2505_Group8.mealer.UI.Activities.RecommendationsFragment"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+app:layout_constraintTop_toBottomOf="@id/recommendation_search"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        app:layoutManager="LinearLayoutManager"
+        tools:listitem="@layout/fragment_recommendation_item" />
+</androidx.constraintlayout.widget.ConstraintLayout>
