--- a/app/src/main/res/layout/fragment_recommendation_item.xml
+++ b/app/src/main/res/layout/fragment_recommendation_item.xml
@@ -23,4 +23,61 @@
         android:layout_marginEnd="5dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <LinearLayout
+        android:id="@+id/recommendation_stars"
+        android:layout_width="match_parent"
+        android:layout_height="32dp"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:layout_marginTop="7dp"
+        app:layout_constraintStart_toStartOf="@id/recommendation_item_title"
+        app:layout_constraintEnd_toEndOf="@id/recommendation_item_title"
+        app:layout_constraintTop_toBottomOf="@id/recommendation_item_title">
+        <ImageView
+            android:id="@+id/recommendation_1_star"
+            android:layout_width="64dp"
+            android:layout_height="match_parent"
+            android:src="@drawable/ic_baseline_star_border_24"
+            android:scaleType="fitCenter"
+            android:background="#00000000"
+            app:tint="@color/primary"
+            android:contentDescription="@string/order_1_star_rating" />
+        <ImageView
+            android:id="@+id/recommendation_2_star"
+            android:layout_width="64dp"
+            android:layout_height="match_parent"
+            android:src="@drawable/ic_baseline_star_border_24"
+            android:scaleType="fitCenter"
+            android:background="#00000000"
+            app:tint="@color/primary"
+            android:contentDescription="@string/order_2_star_rating" />
+        <ImageView
+            android:id="@+id/recommendation_3_star"
+            android:layout_width="64dp"
+            android:layout_height="match_parent"
+            android:src="@drawable/ic_baseline_star_border_24"
+            android:scaleType="fitCenter"
+            android:background="#00000000"
+            app:tint="@color/primary"
+            android:contentDescription="@string/order_3_star_rating" />
+        <ImageView
+            android:id="@+id/recommendation_4_star"
+            android:layout_width="64dp"
+            android:layout_height="match_parent"
+            android:src="@drawable/ic_baseline_star_border_24"
+            android:scaleType="fitCenter"
+            android:background="#00000000"
+            app:tint="@color/primary"
+            android:contentDescription="@string/order_4_star_rating" />
+        <ImageView
+            android:id="@+id/recommendation_5_star"
+            android:layout_width="64dp"
+            android:layout_height="match_parent"
+            android:src="@drawable/ic_baseline_star_border_24"
+            android:scaleType="fitCenter"
+            android:background="#00000000"
+            app:tint="@color/primary"
+            android:contentDescription="@string/order_5_star_rating" />
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
