Add view chef profile button

--- a/app/src/main/res/layout/activity_recipe_client.xml
+++ b/app/src/main/res/layout/activity_recipe_client.xml
@@ -18,6 +18,15 @@
         app:layout_constraintHorizontal_bias="0.436"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+    
+    <Button
+        android:id="@+id/recipe_profile_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/chef_profile"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        />
 
     <TextView
         android:id="@+id/recipe_course_label"
